# netcreds-ng

./: .gitignore  README.md  logging_config.py  netcreds-ng.py  parse_packet.py  pyproject.toml  utils.py
parsers/: parse_snmp.py
src/netcreds_ng/: __main__.py  analytics.ini  analytics.py  analytics_configs.ini  analytics_configs.py  logging_config.py  output_writer.py  parse_packet.py  state.py
src/netcreds_ng/core/: capture.py  dispatcher.py  packet_processing.py  parser_manager.py
src/netcreds_ng/parsers/: base_parser.py  ftp.py  http.py  irc.py  kerberos.py  mail.py  ntlm.py  parse_kerberos.py  snmp.py  telnet.py
src/netcreds_ng/tui/: dashboard.py  static_display.py
src/netcreds_ng/tui/widgets/: analytics_panel.py  credentials_table.py
src/netcreds_ng/utils/: bpf.py  network.py  tcp_reassembly.py
test/HTTP/: run_http_tests.sh
test/Telnet/: telnet_capture.pcap
